# HT-Tracker

./: .gitignore  README.md  main.py  pyproject.toml
app/: alembic.ini  database.py  main.py  models.py  schemas.py
app/dependencies/: auth.py
app/migrations/: env.py
app/migrations/versions/: 004cabebbf98_fix_habitlog_foreign_key.py  146cc98c6e80_add_user_model_and_link_habits.py  6a7b2207dab9_initial_create.py  9bed06e8571c_initial_mysql_schema.py  bd4bbff2e124_add_user_model_and_link_habits.py
app/routes/: habit.py  habitlog.py  user.py
app/static/: style.css
app/static/script/: confirm-modal.js
app/templates/: account.html  error.html  habitlog_form.html  habits.html  login.html  logs.html  register.html  stats.html
app/utils/: security.py  stats_func.py
docs/: Idea.md
