[project]
name = "ht-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.2",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
