[project]
name = "ht-tracker"
version = "2.0.0"
description = "A simple, structured end-to-end project, developed to learn backend architecture, database migrations, and full-stack integration."
authors = [
    { name = "Aryan Burnwal", email = "work.aburnwal@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=46.0.4",
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "jinja2>=3.1.6",
    "passlib[argon2,bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
